# lunchtable

./: .gitignore  README.md
backend/: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
backend/entity/: Cargo.toml
backend/entity/src/: user.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: api.rs  core.rs  main.rs  models.rs  server.rs
backend/src/api/: busy.rs  matches.rs  user.rs
backend/src/core/: error.rs
backend/src/models/: user.rs
backend/src/server/: config.rs  database.rs  graphql.rs  redis.rs  rocket.rs
frontend/: codegen.ts  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Status.tsx  User.tsx  main.tsx
