[package]
name = "lunchtable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
juniper = { git = "https://github.com/graphql-rust/juniper.git", version = "0.16.0-dev", features = [
  "chrono",
] }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper.git", version = "0.9.0-dev" }
# juniper = { version = "0.15.12", features = ["chrono-tz"] }
# juniper_rocket = "0.8.2"
rocket = { version = "0.5.0", features = ["uuid"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
