[workspace]
members = ["entity", "migration"]
resolver = "2"
[package]
name = "lunchtable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
juniper = { git = "https://github.com/graphql-rust/juniper.git", version = "0.16.0-dev", features = [
  "chrono",
] }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper.git", version = "0.9.0-dev" }
rocket = { version = "0.5.0", features = ["uuid"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
redis-macros = "0.2.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
deadpool-redis = { version = "0.14.0", features = ["serde"] }
config = "0.13.4"
thiserror = "1.0.56"
bytes = "1.5.0"
sea-orm = { version = "0.12.12", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
] }
entity = { version = "0.1.0", path = "entity" }
